Change the way properties and defaults are handled, creating BotState and BotDefaults classes to interact with them